[package]
name = "bat"
version = "1.0.0"
authors = ["heyin <heyin.cjy@alibaba-inc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["suggestions", "color"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.8.2"
log = "0.4.14"
chrono = { version = "0.4", features = ["serde"] }
mysql = "20.1.0"